[package]
name = "clash"
version = "0.2.0"
edition = "2021"

[dependencies]
moonwalk = { git = "https://github.com/solarmoff-afk/MoonWalk", package = "moonwalk" }
moonwalk_bootstrap = { git = "https://github.com/solarmoff-afk/MoonWalk", package = "moonwalk_bootstrap" }
glam = { version = "0.24", features = ["scalar-math", "bytemuck"] }
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.21"
prost = "0.12"
url = "2.5"
futures = "0.3"

[build-dependencies]
prost-build = "0.12"
