[package]
name = "clash"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "app"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
moonwalk = { git = "https://github.com/solarmoff-afk/MoonWalk", package = "moonwalk" }
moonwalk_bootstrap = { git = "https://github.com/solarmoff-afk/MoonWalk", package = "moonwalk_bootstrap" }
glam = { version = "0.24", features = ["scalar-math", "bytemuck"] }
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.21"
prost = "0.12"
url = "2.5"
futures = "0.3"

[build-dependencies]
prost-build = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"
winit = { version = "0.30", features = ["android-native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }
